# myorca

./: .gitignore  FORME.md  Makefile  README.md  pyproject.toml
src/: inference.py  main.py  model.py  utils.py
